# mileversion

./: .gitignore  CMakeLists.txt  build-android.sh
include/mileversion/: mileversionimpl.h  mileversionimpl_ANDROID.h
src/: CMakeLists.txt  mileversionimpl_ANDROID.cpp
